<resources>
    <string name="app_name">Day29</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_event">My Events</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_task">Tasks</string>
    <string name="menu_friends">Invite Friends</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_about">About</string>

</resources>