<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/baseline_task_alt_24"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/baseline_email_24"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_signout" />
    </group>
</menu>